objects/Product_Validation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Conversion_Ref_ID__c</fullName>
        <externalId>true</externalId>
        <label>Conversion Ref ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Value__c</fullName>
        <label>Product_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product_Validation</label>
    <listViews>
        <fullName>Bo_s_View</fullName>
        <columns>NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Product_Value__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Bo&apos;s View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>